--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,27 @@
-#to do 
+#flask libraries
+Flask==1.1.1
+Flask-RESTful==0.3.7
+Flask-WTF==0.14.2
+#forms in html for flask
+WTForms==2.2.1
+#hashing passwords library
+passlib==1.7.2
+#library which contains sqlite
+SQLAlchemy==1.3.5
+#data processing and storage
+pandas==0.24.2
+numpy==1.17.0
+#deep learning libraries
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+Keras==2.2.5
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+#visualizations library
+matplotlib==3.1.0
+seaborn==0.9.0
+#clustering libraries
+scikit-learn==0.21.2
+yellowbrick==1.0.1
+pyclustertend==1.4.0
